--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -87,7 +87,8 @@ main {
 
 .section-title {
 
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 30px, ;
     font-weight: 700;
     font-size: 35px;
 }
@@ -112,4 +113,49 @@ main {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+.what-i-do {
+    margin-top: 130px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+    margin-top: 170px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+
+.experience {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+    color: #757575;
+    margin-top: 30px;
+}
+
+.resume-title {
+    margin-top: 130px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
 }
