--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,7 +17,7 @@ nav {
     height: 64px;
     border-radius: 5px;
     background: #FD6E0A;
-    color: #FFFFFF;
+    color: #FFFFFF;   
 }
 
 .text-primary {
@@ -197,6 +197,7 @@ main {
     gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px ;
+    margin-top: 130px;
 }
 .contact .section-title{
         text-align: left;
